wg-easy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  strategy:
    # Only allow 1 instance to run at once
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-easy
    spec:
      containers:
        - name: wg-easy
          # Environment
          image: ghcr.io/wg-easy/wg-easy:15
          imagePullPolicy: IfNotPresent
          # Ports
          ports:
            - containerPort: 31313
              name: wg
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          # Probes
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          # Resources
          resources: 
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              memory: "128Mi"
          # Security context
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          # Volumes
          volumeMounts:
            - mountPath: /etc/wireguard
              name: config
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-storage-claim
