wg-easy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  name: wg-easy
  namespace: wg-easy
spec:
  ingressClassName: nginx
  rules:
    - host: wg.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: wg-easy-http
                port: 
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - wg.crobasaurusrex.ryanbeales.com
      secretName: wg-crobasaurusrex-ryanbeales-com-tls
